--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_design:
-    # path: ../../flutter_design
-  flutter_design_viewer:
-    # path: ../
+  # internal
+  flutter_design: ^0.0.11-pre+1
+  # flutter_design:
+  #   path: ../../flutter_design
+  flutter_design_viewer: ^0.0.11-pre+1
+  # flutter_design_viewer:
+  #   path: ../
   # icon
   flutter_feather_icons: ^2.0.0+1
   ionicons: ^0.1.2
@@ -30,11 +33,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  # flutter_design_codegen: ^0.0.11-pre+1
-  flutter_design_codegen:
-    # path: ../../flutter_design_codegen
+  flutter_design_codegen: ^0.0.11-pre+1
+  # flutter_design_codegen:
+  #   path: ../../flutter_design_codegen
   build_runner: ^2.1.7
+
   flutter_lints: ^1.0.0
 
 flutter:
   uses-material-design: true
+
